[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
indicatif = "0.17"
url = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"